recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:4: error: not found: value lenght
	avance(lenght)}
               ^PentaKoch:6: error: not found: value lenght
		pentaKoch(levels-1,lenght*0.4)
                                   ^PentaKoch:8: error: not found: value lenght
		pentaKoch(levels-1,lenght*0.4)
                                   ^PentaKoch:10: error: not found: value lenght
		pentaKoch(levels-1,lenght*0.4)
                                   ^PentaKoch:12: error: not found: value lenght
		pentaKoch(levels-1,lenght*0.4)
                                   ^PentaKoch:14: error: not found: value lenght
		pentaKoch(levels-1,lenght*0.4)
                                   ^PentaKoch:16: error: not found: value lenght
		pentaKoch(levels-1,lenght*0.4)
                                   ^