recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
if(levels==0){
	avance(lenght)}
	else{
		pentaKoch(levels-1,lenght*0.4)
		gauche(120)
		pentaKoch(levels-1,lenght*0.4)
		droite(60)
		pentaKoch(levels-1,lenght*0.4)
		droite(60)
		pentaKoch(levels-1,lenght*0.4)
		droite(60)
		pentaKoch(levels-1,lenght*0.4)
		gauche(120)
		pentaKoch(levels-1,lenght*0.4)
		
	}

}
